fix: aligned inputs questions

--- a/docs/css/form.css
+++ b/docs/css/form.css
@@ -16,7 +16,7 @@
     flex-direction: column;
 }
 #who {
-    & .checkbox-wrapper-16 {
+    & .checkbox-wrapper-16:nth-of-type(1) {
         max-width: 19em;
         width: 100%;
         & label {
@@ -27,6 +27,10 @@
             }
         }
     }
+    & .checkbox-wrapper-16:nth-of-type(2) input {
+        max-width: 19em;
+        width: 100%;
+    } 
 }
 
 #formatWho {
